# gecko-server

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: publish-ghcr.yaml
src/: main.rs
src/database/: database.rs
src/routes/: environmental_information.rs  mod.rs
src/state/: state.rs
