[package]
name = "gecko-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
rocket = "0.5.1"
rocket_cors = "0.6.0"
serde = "1.0.203"
serde_json = "1.0.117"
tracing = "0.1"
tracing-subscriber = "0.3"


[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
